# cmake_gtest_template

./: CMakeLists.txt  README.md
.devcontainer/: devcontainer.json  docker-compose.yml
